[gd_scene load_steps=7 format=3 uid="uid://ds4c4mvbfkjgl"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_i5roo"]
[ext_resource type="PackedScene" uid="uid://l86i65s8x6p0" path="res://scenes/character.tscn" id="2_7ps6d"]
[ext_resource type="AudioStream" uid="uid://biyj6ytumufni" path="res://music/sword.mp3" id="3_jw177"]
[ext_resource type="AudioStream" uid="uid://cdb7d80f0b1oi" path="res://music/hurt.mp3" id="4_7ul0e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qeyt6"]
size = Vector2(9, 5)

[sub_resource type="CircleShape2D" id="CircleShape2D_evlbo"]
radius = 12.0

[node name="Player" type="CharacterBody2D"]
y_sort_enabled = true
platform_floor_layers = 4294901760
script = ExtResource("1_i5roo")

[node name="Character" parent="." instance=ExtResource("2_7ps6d")]
position = Vector2(0, -5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -2.5)
shape = SubResource("RectangleShape2D_qeyt6")

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_evlbo")

[node name="attack_cooldown" type="Timer" parent="."]

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.45

[node name="Camera2D2" type="Camera2D" parent="."]
limit_left = -2
limit_top = -5
limit_right = 1160
limit_bottom = 1142
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="SwordAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_jw177")
pitch_scale = 2.0
bus = &"sound"

[node name="HurtAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7ul0e")
pitch_scale = 0.97

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
